# trip-planner-multi-agent-system

./: .gitignore  README.md  TODO  pyproject.toml
src/: generate_token.py  main.py
src/agents/: calendar_agent.py  flight_search_agent.py  graph_builder.py
src/core/: config.py  models.py  workflow_state.py
src/prompts/: calendar_prompt.py  flight_prompt.py
src/tools/: calendar_tool.py  flight_tool.py  handoff_tools.py
